<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView 
		android:layout_marginBottom="50dip" 
		android:id="@+id/ScrollView01" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent">
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
		    <TextView  
		    	android:id="@+id/label_1"
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" 
		        android:text="@string/string_label_1"
		        />     
		    <Button android:id="@+id/btnSelectContact" 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="fill_parent" 
		    	android:layout_toRightOf="@+id/txtPhoneNo" 
		    	android:layout_below="@+id/label_1" 
		    	android:text="@string/select_contact"
		    	/>
		    <EditText 
		        android:id="@+id/txtPhoneNo"  
		        android:layout_height="wrap_content" 
		        android:layout_width="250px" 
		        android:layout_below="@id/label_1"/>
		    <TextView  
		    	android:id="@+id/label_2"
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"         
		        android:text="@string/message"
		        android:layout_below="@id/txtPhoneNo"
		        />              
		    <EditText android:id="@+id/txtMessage" 
		    	android:layout_width="fill_parent" 
		    	android:layout_height="150px" 
		    	android:layout_below="@id/label_2"
		    	android:drawingCacheQuality="auto"/>
		    <Button 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:id="@+id/btnChoseDate" 
				android:layout_below="@id/txtMessage"
				android:text="@string/chose_date"
				/>
		    <Button 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:id="@+id/btnChoseTime" 
				android:text="@string/chose_time" 
				android:layout_toRightOf="@+id/btnChoseDate" android:layout_below="@+id/txtMessage"/>
		    <Button 
		        android:id="@+id/btnSendSMS"  
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content"
		        android:text="@string/save_new_timedsms" android:layout_below="@+id/txtTimeSend" android:layout_marginTop="10px"/>
			<TextView 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:text="01.01.1970" 
				android:id="@+id/txtDateSend"
				android:layout_below="@+id/btnChoseDate" android:textSize="20px" android:layout_marginLeft="10px" android:layout_marginTop="10px"/>
			<TextView 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:layout_marginLeft="20px" 
				android:id="@+id/txtTimeSend" 
				android:text="00:00"
				android:layout_below="@+id/btnChoseTime" android:layout_toRightOf="@+id/txtDateSend" android:textSize="20px" android:layout_marginTop="10px"/>
		</RelativeLayout>
	</ScrollView>
</LinearLayout>